--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,10 @@
-#map {
-    width: 100%;
+body {
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+}
+
+html, body, #map {
     height: 100%;
+    font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
