--- a/deps/ol3-sidebar.css
+++ b/deps/ol3-sidebar.css
@@ -53,10 +53,11 @@
   transition: all 80ms; }
 .sidebar-tabs > li:hover, .sidebar-tabs > ul > li:hover {
   color: #fff;
-  background-color: rgba(0, 60, 136, 0.6); }
+  background-color: rgba(0, 60, 136, 0.6);
+}
 .sidebar-tabs > li.active, .sidebar-tabs > ul > li.active {
   color: #fff;
-  background-color: #0074d9; }
+  background-color: #3a5a82; }
 .sidebar-tabs > li.disabled, .sidebar-tabs > ul > li.disabled {
   color: rgba(255, 255, 255, 0.4); }
 .sidebar-tabs > li.disabled:hover, .sidebar-tabs > ul > li.disabled:hover {
@@ -109,13 +110,15 @@
     min-width: 420px; } }
 
 .sidebar-header {
+  font-family: Tahoma, Geneva, sans-serif !important;
+  min-width: 100%;
   margin: -10px -20px 0;
-  height: 40px;
-  padding: 0 20px;
-  line-height: 40px;
+  height: 50px;
+  padding: 8px 0 8px 30px;
+  line-height: 50px;
   font-size: 14.4pt;
   color: #fff;
-  background-color: #0074d9; }
+  background-color: #3a5a82; }
 
 .sidebar-close {
   position: absolute;
