--- a/deps/ol3-sidebar.css
+++ b/deps/ol3-sidebar.css
@@ -111,10 +111,8 @@
 
 .sidebar-header {
   font-family: Tahoma, Geneva, sans-serif !important;
-  min-width: 100%;
-  margin: -10px -20px 0;
-  height: 50px;
-  padding: 8px 0 8px 30px;
+  margin: -10px -20px 10px;
+  padding: 8px 0 0 30px;
   line-height: 50px;
   font-size: 14.4pt;
   color: #fff;
@@ -140,7 +138,7 @@
   overflow: hidden; }
 
 .sidebar-left ~ .sidebar-map .ol-zoom {
-  margin-left: 40px; }
+  margin-left: 52px; }
 @media (min-width: 768px) {
   .sidebar-left ~ .sidebar-map .ol-zoom {
     transition: margin-left 500ms; } }
